--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@expo/ngrok": "^4.1.3",
         "@expo/vector-icons": "^14.0.2",
         "@react-navigation/bottom-tabs": "^7.0.0",
+        "@react-navigation/drawer": "^7.1.1",
         "@react-navigation/native": "^7.0.14",
         "dom-to-image": "^2.6.0",
         "expo": "^52.0.16",
@@ -40,6 +41,7 @@
         "react-dom": "18.3.1",
         "react-native": "0.76.6",
         "react-native-gesture-handler": "~2.20.2",
+        "react-native-paper": "^5.13.1",
         "react-native-reanimated": "~3.16.1",
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.4.0",
