--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "dom-to-image": "^2.6.0",
-    "expo": "^52.0.16",
+    "expo": "^52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
@@ -30,8 +31,8 @@
     "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
     "expo-media-library": "~17.0.5",
-    "expo-router": "~4.0.16",
-    "expo-splash-screen": "~0.29.20",
+    "expo-router": "^4.0.17",
+    "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
@@ -48,8 +49,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
